--- a/style.css
+++ b/style.css
@@ -119,15 +119,15 @@ main{
 
 
 .pogram-div1{
-    background:url(Images/2.png)
+    background:url(images/2.png)
 }
 
 .pogram-div2{
-    background:url(Images/3.png)
+    background:url(images/3.png)
 }
 
 .pogram-div3{
-    background:url(Images/4.png)
+    background:url(images/4.png)
 }
 
 
